Refactor event listeners and UI components
- Updated event listener assignments for export and copy buttons to check for element existence.
- Commented out the export section in HTML for future use.
- Enhanced reset functionality to clear additional UI elements and force a page refresh after resetting.
- Improved PDF parsing logic to better detect statement years.
- Removed unused account rendering logic from the UI.
- Cleaned up CSS by removing unnecessary whitespace.

--- a/index.html
+++ b/index.html
@@ -88,12 +88,6 @@
                 <h2>Step 3: Classify Transactions</h2>
                 <p class="phase-description">Assign transactions to buckets. Unclassified transactions are shown below.</p>
                 <div id="unclassified-transactions" class="unclassified-transactions"></div>
-            </section>
-
-            <!-- Accounts and Buckets View -->
-            <section id="accounts-section" class="card" style="display: none;">
-                <h2>Account Allocations</h2>
-                <div id="accounts-list" class="accounts-list"></div>
                 <button id="proceed-to-review-btn" class="btn btn-primary" style="margin-top: 16px;">
                     Show Bank Bucket Breakdown →
                 </button>
@@ -107,13 +101,13 @@
             </section>
 
             <!-- Export Section -->
-            <section id="export-section" class="card" style="display: none;">
+            <!-- <section id="export-section" class="card" style="display: none;">
                 <h2>Export</h2>
                 <div class="export-controls">
                     <button id="export-csv-btn" class="btn btn-secondary">Export CSV</button>
                     <button id="copy-clipboard-btn" class="btn btn-secondary">Copy to Clipboard</button>
                 </div>
-            </section>
+            </section> -->
         </main>
     </div>
 
