--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <section id="import-section" class="card">
                 <h2>Import Transactions</h2>
                 <div class="import-controls">
-                    <input type="file" id="csv-file-input" accept=".csv" />
-                    <button id="import-csv-btn" class="btn btn-primary">Import CSV</button>
-                    <input type="file" id="pdf-file-input" accept=".pdf" />
-                    <button id="import-pdf-btn" class="btn btn-primary">Import PDF Statement</button>
+                    <input type="file" id="csv-file-input" accept=".csv" multiple />
+                    <button id="import-csv-btn" class="btn btn-primary">Import CSV(s)</button>
+                    <!-- PDF import disabled - data parsing was unreliable -->
+                    <!-- <input type="file" id="pdf-file-input" accept=".pdf" />
+                    <button id="import-pdf-btn" class="btn btn-primary">Import PDF Statement</button> -->
                     <button id="manage-accounts-from-import-btn" class="btn btn-secondary" style="display: none;">Manage Accounts</button>
                     <button id="reset-btn" class="btn btn-danger" style="display: none;">Reset All Data</button>
                 </div>
@@ -111,15 +112,15 @@
         </main>
     </div>
 
-    <!-- PDF.js library for PDF parsing -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <!-- PDF.js library for PDF parsing (disabled - data parsing was unreliable) -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script> -->
+    <!-- <script src="pdf-parser.js"></script> -->
     
     <!-- Core utilities and constants -->
     <script src="constants.js"></script>
     <script src="utils.js"></script>
     <script src="storage.js"></script>
     <script src="csv-parser.js"></script>
-    <script src="pdf-parser.js"></script>
     <script src="duplicate-detector.js"></script>
     <script src="account-detector.js"></script>
     <script src="bucket-suggester.js"></script>
